--- a/apriltag_ros/package.xml
+++ b/apriltag_ros/package.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<package>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>apriltag_ros</name>
   <version>3.2.1</version>
   <description>
@@ -16,48 +17,34 @@
   <maintainer email="danylo.malyuta@gmail.com">Danylo Malyuta</maintainer>
   <maintainer email="w.merkt+oss@gmail.com">Wolfgang Merkt</maintainer>
 
-  <author>Danylo Malyuta</author>
-
   <license>BSD</license>
 
   <url type="website">http://www.ros.org/wiki/apriltag_ros</url>
   <url type="bugtracker">https://github.com/AprilRobotics/apriltag_ros/issues</url>
   <url type="repository">https://github.com/AprilRobotics/apriltag_ros</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <author>Danylo Malyuta</author>
 
-  <build_depend>apriltag</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>image_transport</build_depend>
-  <build_depend>image_geometry</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>cv_bridge</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>pluginlib</build_depend>
-  <build_depend>eigen</build_depend>
-  <build_depend>libopencv-dev</build_depend>
-  <build_depend>cmake_modules</build_depend>
-  
-  <run_depend>tf</run_depend>
-  <run_depend>apriltag</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>image_transport</run_depend>
-  <run_depend>image_geometry</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>message_runtime</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>cv_bridge</run_depend>
-  <run_depend>nodelet</run_depend>
-  <run_depend>pluginlib</run_depend>
-  <run_depend>eigen</run_depend>
-  <run_depend>libopencv-dev</run_depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
+
+  <depend>apriltag</depend>
+  <depend>apriltag_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>image_transport</depend>
+  <depend>image_geometry</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>sensor_msgs</depend>
+  <depend>cv_bridge</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
+  <depend>eigen</depend>
+  <depend>libopencv-dev</depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
-    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
